--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,10 @@ license = "GPL2"
 authors = ["https://github.com/insertokername/"]
 
 [dependencies]
-clap = { version = "4.5.1", features = ["derive"] }
-colored = "3.0.0"
 directories = "6.0.0"
 env_logger = "0.11.3"
 log = "0.4.21"
+rand = "0.9.1"
 reqwest = { version = "0.12.15", features = ["multipart","cookies"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
